<resources>
    <string name="app_name">LifeStreamer</string>
    <string name="action_settings">Settings</string>
    <string name="action_rtmp_help">How to use RTMP as source</string>
    <string name="action_srt_help">How to use SRT as source</string>
    <string name="action_uvc_help">How to use USB source</string>
    <string name="action_faq">FAQ</string>
    <string name="action_known_issues">Known issues and workarounds</string>
    <string name="action_quit">Quit</string>
    <string name="menu_actions">Menu actions</string>
    <string name="streaming_channel_name">Camera Streaming</string>
    <string name="streaming_channel_description">Notification channel for camera streaming service</string>
    <string name="service_notification_title">LifeStreamer</string>
    <string name="service_notification_text_created">Service created</string>
    <string name="status_not_streaming">Not streaming</string>
    <string name="status_starting">Starting...</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_streaming">Live</string>
    <string name="status_error">Error</string>
    <string name="audio_source_microphone">Microphone</string>
    <string name="audio_source_bluetooth">Bluetooth</string>
    <string name="audio_out_explanation_title">Audio Output Capture</string>
    <string name="audio_out_explanation_message">Record audio output and use it as stream audio instead of the microphone.\n\nIncludes media (music, videos, browser audio), games and other app sounds. Excludes notifications and alarms.\n\nSome apps can block their audio capture.</string>
    <string name="continue_button">Continue</string>
    <string name="rtmp_audio_explanation_title">ExoPlayer Audio Capture</string>
    <string name="rtmp_audio_explanation_message">LifeStreamer uses ExoPlayer to playback RTMP or SRT streams. App needs your permission to capture ExoPlayer audio output.\n\nNew Android versions ask to choose a single app or the entire device for video capture. This choice has no effect on audio capture.\n\nLifeStreamer records only its own (ExoPlayer) audio and nothing else for RTMP source.</string>
    <string name="audio_source_rtmp">Media Projection Audio</string>
    <string name="audio_source_none">No Audio</string>
    <string name="service_notification_action_mute">Mute</string>
    <string name="service_notification_action_unmute">Unmute</string>
    <string name="service_notification_action_exit">Quit</string>
    <string name="live">Start Live</string>
    <string name="stop">Stop</string>
    <string name="permission">Permission</string>
    <string name="permission_not_granted">To function properly, StreamPack needs your permission.</string>
    <string name="switch_camera_source">Switch camera source</string>
    <string name="turn_on_off_torch">Turn on/off torch</string>
    <string name="set_white_balance">Set white balance</string>
    <string name="set_exposure_compensation">Set exposure compensation</string>
    <string name="set_zoom_ratio">Set zoom ratio</string>
    <string name="set_auto_focus_mode">Set auto focus mode</string>
    <string name="mute_unmute_microphone">Mute unmute microphone</string>
    <string name="settings">Settings</string>
    <string name="warning">Warning</string>
    <plurals name="camera_frame_rate_not_supported">
        <item quantity="one">Camera %1$s does not support %2$d fps</item>
        <item quantity="other">Cameras %1$s do not support %2$d fps</item>
    </plurals>
    <string name="video">Video</string>
    <string name="video_enable">Enable</string>
    <string name="video_enable_key">video_enabled_key</string>
    <string name="video_settings_key">video_settings_key</string>
    <string name="video_encoder">Encoder</string>
    <string name="video_encoder_key">video_encoder_key</string>
    <string name="default_video_encoder">video/avc</string>
    <string name="video_resolution">Resolution</string>
    <string name="video_resolution_key">video_resolution_key</string>
    <string name="default_video_resolution">1920x1080</string>
    <string name="video_resolution_hardware_filter_title">Show resolutions that Android cameras support</string>
    <string name="video_resolution_hardware_filter_summary">Note: If the selected resolution isn\'t supported by all Android cameras, some may switch to an unexpected size.</string>
    <string name="video_resolution_hardware_filter_key">video_resolution_hardware_filter_key</string>
    <string name="camera_fps">FPS of Android cameras</string>
    <string name="camera_fps_key">camera_fps_key</string>
    <string name="match_fps_title">Set video encoder FPS to FPS of Android cameras</string>
    <string name="match_fps_key">match_fps_key</string>
    <string name="video_fps_note_summary">For best results, set video encoder FPS to FPS of main video source you plan to use.\n\nFor example, RTMP and USB sources can have different FPS from FPS of Android cameras.</string>
    <string name="video_fps_note_key">video_fps_note_key</string>
    <string name="video_fps">Video encoder FPS</string>
    <string name="video_fps_key">video_fps_key</string>
    <string name="default_fps">30</string>
    <string name="video_bitrate">Bitrate in kbps</string>
    <string name="video_bitrate_key">live_video_bitrate_key</string>
    <string name="default_video_bitrate">1000</string>
    <string name="video_profile">Profile</string>
    <string name="video_profile_key">video_profile_key</string>
    <string name="video_level">Level</string>
    <string name="video_level_key">video_level_key</string>
    <string name="audio">Audio</string>
    <string name="audio_enable">Enable</string>
    <string name="audio_enable_key">audio_enabled_key</string>
    <string name="audio_settings_key">audio_settings_key</string>
    <string name="audio_encoder">Encoder</string>
    <string name="audio_encoder_key">audio_encoder_key</string>
    <string name="default_audio_encoder">audio/mp4a-latm</string>
    <string name="audio_number_of_channels">Number of channels</string>
    <string name="audio_channel_config_key">audio_channel_config_key</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="audio_bitrate_key">audio_bitrate_key</string>
    <string name="audio_sample_rate">Sample rate in kHz</string>
    <string name="audio_sample_rate_key">audio_sample_rate_key</string>
    <string name="audio_byte_format">Byte format</string>
    <string name="audio_byte_format_key">audio_byte_format_key</string>
    <string name="audio_byte_format_8bit">8 bits</string>
    <string name="audio_byte_format_16bit">16 bits</string>
    <string name="audio_byte_format_float">Float</string>
    <string name="audio_profile">Profile</string>
    <string name="audio_profile_key">audio_profile_key</string>
    <string name="audio_source_type">Audio source (try VC if USB audio is too loud/noisy)</string>
    <string name="audio_source_type_key">audio_source_type_key</string>
    <string name="endpoint">Endpoint</string>
    <string name="endpoint_type">Type</string>
    <string name="endpoint_type_key">endpoint_type_key_v2</string>
    <string name="to_ts_file">Record TS file</string>
    <string name="to_flv_file">Record FLV file</string>
    <string name="to_srt">Stream SRT</string>
    <string name="to_srtla">Stream SRTLA</string>
    <string name="to_rtmp">Stream RTMP</string>
    <string name="to_mp4_file">Record MP4 file</string>
    <string name="to_webm_file">Record WebM file</string>
    <string name="to_ogg_file">Record OGG file</string>
    <string name="to_3gp_file">Record 3GP file</string>
    <string name="srt_server">SRT Server</string>
    <string name="srt_server_key">srt_server_key</string>
    <string name="server_ip">Server address or IP (without srt:// prefix)</string>
    <string name="srt_server_ip_key">srt_server_ip_key</string>
    <string name="default_srt_server_url">127.0.0.1</string>
    <string name="server_port">Port</string>
    <string name="srt_server_port_key">srt_server_port_key</string>
    <string name="default_srt_server_port">6000</string>
    <string name="srt_server_stream_id_key">server_stream_id_key</string>
    <string name="srt_server_stream_id">Stream ID</string>
    <string name="default_srt_server_stream_id" />
    <string name="srt_server_passphrase_key">srt_server_passphrase_key</string>
    <string name="srt_server_passphrase">Passphrase</string>
    <string name="default_srt_server_stream_passphrase" />
    <string name="default_srt_server_passphrase">""</string>
    <string name="srt_server_latency_key">srt_server_latency_key</string>
    <string name="srt_server_latency">Latency (ms)</string>
    <string name="default_srt_server_latency">2000</string>
    <string name="srt_server_enable_bitrate_regulation_key">srt_server_enable_bitrate_regulation_key</string>
    <string name="srt_server_enable_bitrate_regulation">Enable adaptive bitrate</string>
    <string name="bitrate_regulation_key">bitrate_regulation_key</string>
    <string name="bitrate_regulation">Adaptive bitrate</string>
    <string name="srt_server_video_target_bitrate_key">srt_server_video_target_bitrate_key</string>
    <string name="srt_server_video_target_bitrate">Video target bitrate (kb/s)</string>
    <string name="srt_server_video_min_bitrate_key">srt_server_video_min_bitrate_key</string>
    <string name="srt_server_video_min_bitrate">Video minimum bitrate (kb/s)</string>
    <string name="rtmp_server_enable_bitrate_regulation_key">rtmp_server_enable_bitrate_regulation_key</string>
    <string name="rtmp_server_enable_bitrate_regulation">Enable adaptive bitrate</string>
    <string name="rtmp_server_video_target_bitrate_key">rtmp_server_video_target_bitrate_key</string>
    <string name="rtmp_server_video_target_bitrate">Video target bitrate (kb/s)</string>
    <string name="rtmp_server_video_min_bitrate_key">rtmp_server_video_min_bitrate_key</string>
    <string name="rtmp_server_video_min_bitrate">Video minimum bitrate (kb/s)</string>
    <string name="srt_server_moblin_regulator_mode_key">srt_server_moblin_regulator_mode_key</string>
    <string name="srt_server_moblin_regulator_mode">Bitrate algorithm</string>
    <string name="srt_server_moblin_regulator_mode_fast">Moblin fast</string>
    <string name="srt_server_moblin_regulator_mode_slow">Moblin slow</string>
    <string name="srt_server_moblin_regulator_mode_belabox">Belabox</string>
    <string name="srt_server_moblin_regulator_mode_value_fast">fast</string>
    <string name="srt_server_moblin_regulator_mode_value_slow">slow</string>
    <string name="srt_server_moblin_regulator_mode_value_belabox">belabox</string>
    <string name="rtmp_server_key">rtmp_server_key</string>
    <string name="rtmp_server">RTMP Server</string>
    <string name="rtmp_server_url_key">rtmp_server_url_key</string>
    <string name="default_rtmp_url">rtmp://127.0.0.1:1935/publish/live</string>
    <string name="server_url">URL</string>
    <string name="srtla_key">srtla_key</string>
    <string name="srtla_settings">SRTLA</string>
    <string name="srtla_receiver_host_key">srtla_receiver_host_key</string>
    <string name="srtla_receiver_host">SRTLA server (example: au.srt.belabox.net or IP address)</string>
    <string name="default_srtla_receiver_host">au.srt.belabox.net</string>
    <string name="srtla_receiver_port_key">srtla_receiver_port_key</string>
    <string name="srtla_receiver_port">SRTLA server port</string>
    <string name="default_srtla_receiver_port">5000</string>
    <string name="srtla_listen_port_key">srtla_listen_port_key</string>
    <string name="srtla_listen_port">Local SRTLA sender listen port (any free port)</string>
    <string name="default_srtla_listen_port">6001</string>
    <string name="srtla_latency_key">srtla_latency_key</string>
    <string name="srtla_latency">Latency (ms)</string>
    <string name="default_srtla_latency">2000</string>
</resources>